--- a/develop/assets/css/style.css
+++ b/develop/assets/css/style.css
@@ -145,4 +145,8 @@
             margin-top: 2rem;
         }
         
+        .dropdown {
+            padding-top: 1rem;
+        }
+        
         @media screen and (max-width: 600px) {}
